# toss

./: .dockerignore  .gitignore  .mcp.json  Dockerfile  README.md  README_CN.md  pyproject.toml
docs/: architecture.md  claude-code.md  cli-reference.md  getting-started.md  profiles.md  self-hosting.md
docs/zh/: architecture.md  claude-code.md  cli-reference.md  getting-started.md  profiles.md  self-hosting.md
hooks/: toss-inbox-check.sh  toss-sync.sh
npm/: package.json
skills/toss-pull/: skill.md
skills/toss-push/: skill.md
src/toss/: __init__.py  __main__.py
src/toss/auth/: __init__.py  github.py  token_store.py
src/toss/cli/: contacts.py  groups.py  inbox_tui.py  main.py  profiles.py  push_pull.py  spaces.py
src/toss/client/: __init__.py  base.py  contacts.py  documents.py  groups.py  spaces.py
src/toss/config/: __init__.py  manager.py  models.py
src/toss/crypto/: __init__.py  encrypt.py  enroll.py  header.py  keypair.py  keystore.py
src/toss/mcp/: __init__.py  server.py
src/toss/sync/: __init__.py  engine.py  state.py
tests/client/: test_content_hash.py  test_device_id.py  test_download_ticket.py  test_features.py
tests/crypto/: test_encrypt.py  test_enroll.py  test_header.py  test_keypair.py  test_keystore.py
worker/: deploy.sh  package-lock.json  package.json  schema.sql  wrangler.toml
worker/migrations/: 001_add_groups.sql  002_content_sha256.sql  003_user_keys.sql
worker/src/: index.ts  router.ts  types.ts
worker/src/handlers/: auth.ts  blobs.ts  cleanup.ts  contacts.ts  documents.ts  groups.ts  keys.ts  migrate.ts  spaces.ts
(+7 files in other folders)
